Sat Apr 21 18:00:31 CDT 2001 Adam Heath <doogie@debian.org>

  * main/main.c: reworked \\ parsing in commandfd.
  * lib/dbmodify.c: fix non-full initalizer.

Sun Apr 22 00:48:18 CEST 2001 Wichert Akkerman <wakkerma@debian.org>

  * main/main.c: fixed some bizar pointer usage

Sun Apr 22 00:33:26 CEST 2001 Wichert Akkerman <wakkerma@debian.org>

  * Makefile.conf.in: remove no longer used warning flags

Sat Apr 21 17:16:28 CDT 2001 Adam Heath <doogie@debian.org>

  * main/help.c, main/processarc.c, main/filesdb.c,  main/configure.c,
    main/archives.c, lib/parse.c: Fix int/pointer casting warnings.
  * include/dpkg.h.in, lib/mlib.c: Rewrote buffer_copy_setup, to avoid
    int/pointer casting warnings.  These means there are several
    variations of buffer_copy_setup.  Also, converted the desc parameter
    to const.

Sun Apr 22 00:09:58 CEST 2001 Wichert Akkerman <wakkerma@debian.org>

  * optlib/long-options.c, lib/showcright.c: include stdlib.h to get
    declaration of exit

Sat Apr 21 17:10:32 CEST 2001 peter karlsson <peterk@debian.org>

  * po/sv.po, doc/sv/dpkg.8, doc/sv/start-stop-daemon.8:
    Updated Swedish translation.

Fri Apr 20 16:02:51 CDT 2001 Adam Heath <doogie@debian.org>

  * debian/changelog: Document stuff that was done in December.

Sat Apr 21 04:02:58 CEST 2001 Wichert Akkerman <wakkerma@debian.org>

  * main/dpkg.8: remove Linux reference

Sat Apr 21 02:39:37 CEST 2001 Wichert Akkerman <wakkerma@debian.org>

  * scripts/dpkg-scanpackages.pl: fix typo in vercmp version cache
  * scripts/dpkg-shlibdeps.pl: remove statement that was basically
    a strange no-op
  * scripts/controllib.pl: give  syntax error for unexpected PGP signature
  * debian/changelog: updated

Fri Apr 20 19:46:38 CDT 2001 Adam Heath <doogie@debian.org>

  * po/pl.po: Remove spurious '%s' in Polish translation

Fri Apr 20 19:37:00 CDT 2001 Adam Heath <doogie@debian.org>

  * scripts/dpkg-source.pl: Import fix for broken dpkg-source.pl from
    1.8.3 version.
