@@ -1,3 +1,8 @@
+Sun Apr 22 01:45:25 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * utils/start-stop-daemon.c: no longer use deprecated multi-line string
+  * utils/md5sum.c: include stdlib.h to get declaration of exit
+
 Sat Apr 21 18:00:31 CDT 2001 Adam Heath <doogie@debian.org>
 
   * main/main.c: reworked \\ parsing in commandfd.
